[gd_scene load_steps=16 format=3 uid="uid://p05o88xsmaah"]

[ext_resource type="Script" path="res://Scripts/Gracz1.gd" id="1_4jxwk"]
[ext_resource type="Script" path="res://Scripts/Game.gd" id="1_h8bl0"]
[ext_resource type="Script" path="res://Scripts/Gracz2.gd" id="2_sqn37"]
[ext_resource type="PackedScene" uid="uid://b5cq4s68gfarp" path="res://Scenes/RightSidetscn.tscn" id="5_hptdk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_knxka"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_mf8l0"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.350649, 0.350649, 0.350649, 0.501961)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qk08e"]
gradient = SubResource("Gradient_mf8l0")
width = 256
height = 16

[sub_resource type="Gradient" id="Gradient_f1rpg"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0.85301, 0.127325, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_kper6"]
gradient = SubResource("Gradient_f1rpg")
width = 256
height = 16

[sub_resource type="Gradient" id="Gradient_d0xag"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 0, 0.0307937, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_llo4f"]
gradient = SubResource("Gradient_d0xag")
width = 256
height = 16

[sub_resource type="Gradient" id="Gradient_nidud"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.377804, 0.377804, 0.377804, 0.501961)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_afqmm"]
gradient = SubResource("Gradient_nidud")
width = 192
height = 8

[sub_resource type="Gradient" id="Gradient_xn0on"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 0.445902, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jgi3l"]
gradient = SubResource("Gradient_xn0on")
width = 192
height = 8

[node name="Game" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_knxka")
script = ExtResource("1_h8bl0")
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_4jxwk")

[node name="Scena" type="Control" parent="HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="TrueScena" type="Control" parent="HBoxContainer/MarginContainer/Scena"]
unique_name_in_owner = true
custom_minimum_size = Vector2(554, 628)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -277.0
offset_top = -314.0
offset_right = 277.0
offset_bottom = 314.0
grow_horizontal = 2
grow_vertical = 2

[node name="Placeholder" type="ColorRect" parent="HBoxContainer/MarginContainer/Scena/TrueScena"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.00979082, 0.24882, 1)

[node name="Status" type="Control" parent="HBoxContainer/MarginContainer/Scena"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer/Scena/Status"]
layout_mode = 0
offset_left = -698.0
offset_top = 729.0
offset_right = -658.0
offset_bottom = 752.0
text = "Siła"

[node name="Strength" type="TextureProgressBar" parent="HBoxContainer/MarginContainer/Scena/Status"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -527.0
offset_top = 731.0
offset_right = -271.0
offset_bottom = 747.0
step = 0.01
value = 50.0
texture_under = SubResource("GradientTexture2D_qk08e")
texture_progress = SubResource("GradientTexture2D_kper6")

[node name="Label2" type="Label" parent="HBoxContainer/MarginContainer/Scena/Status"]
layout_mode = 0
offset_left = -698.0
offset_top = 782.0
offset_right = -608.0
offset_bottom = 805.0
text = "Inteligencja"

[node name="Intelligence" type="TextureProgressBar" parent="HBoxContainer/MarginContainer/Scena/Status"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -527.0
offset_top = 788.0
offset_right = -271.0
offset_bottom = 804.0
step = 0.01
value = 50.0
texture_under = SubResource("GradientTexture2D_qk08e")
texture_progress = SubResource("GradientTexture2D_kper6")

[node name="Label3" type="Label" parent="HBoxContainer/MarginContainer/Scena/Status"]
layout_mode = 0
offset_left = 234.0
offset_top = 1020.0
offset_right = 324.0
offset_bottom = 1043.0
text = "Wstyd"

[node name="Shame" type="TextureProgressBar" parent="HBoxContainer/MarginContainer/Scena/Status"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 405.0
offset_top = 1014.0
offset_right = 661.0
offset_bottom = 1030.0
max_value = 1000.0
step = 0.01
texture_under = SubResource("GradientTexture2D_qk08e")
texture_progress = SubResource("GradientTexture2D_llo4f")

[node name="DodajStrength" type="Label" parent="HBoxContainer/MarginContainer/Scena/Status"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -251.0
offset_top = 729.0
offset_right = -211.0
offset_bottom = 752.0

[node name="Label5" type="Label" parent="HBoxContainer/MarginContainer/Scena/Status"]
layout_mode = 0
offset_left = 249.0
offset_top = 948.0
offset_right = 289.0
offset_bottom = 971.0
text = "Głód"

[node name="Glood" type="TextureProgressBar" parent="HBoxContainer/MarginContainer/Scena/Status"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 420.0
offset_top = 950.0
offset_right = 676.0
offset_bottom = 966.0
step = 0.01
value = 50.0
texture_under = SubResource("GradientTexture2D_qk08e")
texture_progress = SubResource("GradientTexture2D_llo4f")

[node name="DodajGlood" type="Label" parent="HBoxContainer/MarginContainer/Scena/Status"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 499.0
offset_top = 527.0
offset_right = 539.0
offset_bottom = 550.0

[node name="DodajInteligencja" type="Label" parent="HBoxContainer/MarginContainer/Scena/Status"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -251.0
offset_top = 785.0
offset_right = -211.0
offset_bottom = 808.0

[node name="DodajWstyd" type="Label" parent="HBoxContainer/MarginContainer/Scena/Status"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 681.0
offset_top = 1008.0
offset_right = 721.0
offset_bottom = 1031.0

[node name="Label4" type="Label" parent="HBoxContainer/MarginContainer/Scena/Status"]
layout_mode = 0
offset_left = 288.0
offset_top = 877.0
offset_right = 472.0
offset_bottom = 900.0
text = "[Enter] Wstrzymuj pierd"

[node name="Pierdlicznik" type="TextureProgressBar" parent="HBoxContainer/MarginContainer/Scena/Status"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 288.0
offset_top = 900.0
offset_right = 480.0
offset_bottom = 908.0
step = 0.01
texture_under = SubResource("GradientTexture2D_afqmm")
texture_progress = SubResource("GradientTexture2D_jgi3l")

[node name="Akcje" type="VBoxContainer" parent="HBoxContainer/MarginContainer/Scena"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="AkcjeName" type="Label" parent="HBoxContainer/MarginContainer/Scena/Akcje"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "heder"

[node name="TrueAkcje" type="VBoxContainer" parent="HBoxContainer/MarginContainer/Scena/Akcje"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_sqn37")

[node name="Label4" type="Label" parent="HBoxContainer/Control"]
layout_mode = 0
offset_left = 440.0
offset_top = -206.0
offset_right = 801.0
offset_bottom = -183.0
text = "[Shift] Wykonaj pierd"
horizontal_alignment = 1

[node name="PierdName" type="Label" parent="HBoxContainer/Control"]
unique_name_in_owner = true
modulate = Color(0.649351, 0.282974, 0, 1)
layout_mode = 0
offset_left = 417.0
offset_top = -116.0
offset_right = 796.0
offset_bottom = -93.0
horizontal_alignment = 1

[node name="RightSide" parent="HBoxContainer/Control" instance=ExtResource("5_hptdk")]
unique_name_in_owner = true

[editable path="HBoxContainer/Control/RightSide"]
